src/objects/Mensaje_Clic_Hogar__c.object
<CustomObject>
    <fields>
        <fullName>MCH_CAS_estado__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Estado de lectura de una respuesta por parte del usuario.</inlineHelpText>
        <label>Estado Respuesta Leída</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCH_DAT_fecha_alta_consulta__c</fullName>
        <inlineHelpText>Fecha de alta de la consulta.</inlineHelpText>
        <label>Fecha Alta Consulta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCH_DAT_fecha_respuesta__c</fullName>
        <inlineHelpText>Fecha de la respuesta a una consulta</inlineHelpText>
        <label>Fecha Respuesta Consulta</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCH_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Relación con el caso asociado.</inlineHelpText>
        <label>Relación Mensaje y Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mensajes Clic Hogar</relationshipLabel>
        <relationshipName>Mensajes_Clic_Hogar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCH_TXT_asunto__c</fullName>
        <inlineHelpText>Asunto de la consulta realizada a través de clic hogar.</inlineHelpText>
        <label>Asunto</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCH_TXT_consulta__c</fullName>
        <inlineHelpText>Texto de la consulta realizada a través de clic hogar.</inlineHelpText>
        <label>Pregunta/Consulta</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCH_TXT_respuesta__c</fullName>
        <inlineHelpText>Texto de la respuesta a la consulta realizada a través de clic hogar.</inlineHelpText>
        <label>Respuesta Consulta</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mensaje Clic Hogar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre Mensaje Clic Hogar</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mensajes Clic Hogar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>